<resources>
    <string name="app_name">AllEvaluateChain</string>
    <string name="create_wallet_name_hint">钱包名称</string>
    <string name="property_total_assets_cny">总资产($)</string>
    <string name="property_approximate">≈</string>
    <string name="general_prompt">Prompt</string>
    <string name="general_are_u_sure">Are you sure</string>
    <string name="general_got_it">Got it</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_error">Error</string>
    <string name="general_faild">Failed</string>
    <string name="general_change">Change</string>
    <string name="general_save">Save</string>
    <string name="general_retry">Retry</string>
    <string name="general_loading">Loading...</string>
    <string name="general_wait">Wait...</string>
    <string name="general_send">Sending...</string>
    <string name="general_invild">Invalid</string>
    <string name="general_delete">Delete</string>
    <string name="general_back">Back</string>
    <string name="general_tip">Tip</string>
    <string name="general_add">Add</string>
    <string name="general_lover_offline">{0} is offline!</string>
    <string name="general_submitting">Submitting...</string>
    <string name="general_connecting">Connecting...</string>
    <string name="general_male">Male</string>
    <string name="general_female">Female</string>
    <string name="general_online">Online</string>
    <string name="general_offline">Offline</string>
    <string name="general_successfully">Successfully</string>
    <string name="general_can_not_search_self">Unable to query yourself.</string>
    <string name="general_image_desc">Image</string>
    <string name="general_voice_desc">Voice</string>
    <string name="general_bigfile_desc">File</string>
    <string name="general_contact_desc">Contact</string>
    <string name="general_location_desc">Location</string>
    <string name="general_shortvideo_desc">Short Video</string>
    <string name="general_gift_send_desc">Recieved gift</string>
    <string name="general_gift_get_desc">Please give me gift</string>
    <string name="general_all">All</string>
    <string name="general_network_faild">Your network is unavailable!</string>
    <string name="general_data_loading">Data loading...</string>
    <string name="app_name2">ChainEvaluate</string>
    <string name="app_notification_ticker">KChat is running...</string>
    <string name="app_notification_content_title">KChat {0}is running ...</string>
    <string name="app_notification_content_text">Click to return KChat.</string>
    <string name="login_form_hint_loginname">Your ID or Email</string>
    <string name="login_form_hint_loginpassword">Login password</string>
    <string name="login_form_btn_register">Register</string>
    <string name="login_form_btn_login">Log In</string>
    <string name="login_form_cb_rememberpsw">Remember your name?</string>
    <string name="login_form_btn_forgetpsw">Forgot password?</string>
    <string name="login_form_version_info">Version: {0}({1})</string>
    <string name="login_form_validate_login_name_empty">User name is necessary!</string>
    <string name="login_form_validate_login_psw_length_less_six">Must compelete the password!</string>
    <string name="login_form_have_latest_version">Have latest version</string>
    <string name="login_form_have_latest_version_descrption">We strongly recommend that you update to the latest version in order to get better service. Continue to use the older version may cause problems. You can also e-mail us with \"surport@efeelink.com\".</string>
    <string name="login_form_have_latest_version_update_now">Update now!</string>
    <string name="login_form_have_latest_version_ignore">Ignore</string>
    <string name="login_form_connect_to_chatserver_timeout_title">Timeout</string>
    <string name="login_form_connect_to_chatserver_timeout_content">Login timeout, retry?</string>
    <string name="login_form_connect_to_chatserver_timeout_retry">Retry</string>
    <string name="register_form_title">Registeration</string>
    <string name="register_form_notice">Welcome, register now!</string>
    <string name="register_form_view_nickname">Enter your nickname *</string>
    <string name="register_form_view_eMail">Enter your email *</string>
    <string name="register_form_view_password">Your password * </string>
    <string name="register_form_view_confirmpsw">Confirm your password * </string>
    <string name="register_form_view_password_length_hint">* Must be 6 characters or longer!</string>
    <string name="register_form_view_man">Male</string>
    <string name="register_form_view_woman">Female</string>
    <string name="register_form_view_agreelisence">I accepted </string>
    <string name="register_form_view_look_caluse">Term and conditions</string>
    <string name="register_form_view_look_caluse_simple">Term and conditions</string>
    <string name="register_form_btn_submit">Register</string>
    <string name="register_form_valid_nick_name">The nickname is necessary! </string>
    <string name="register_form_valid_mail">Email is necessary!</string>
    <string name="register_form_valid_psw">The password is necessary!</string>
    <string name="register_form_valid_psw_not_same">The two passwords are different!</string>
    <string name="register_form_valid_agree_role">Please read and accept the terms before registeration!</string>
    <string name="register_form_error_mail_exist">Failed in registeration,the Email has been registered!</string>
    <string name="register_form_error_message">Failed in registeration, unknown error!</string>
    <string name="register_success_title">Succeeded!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="forget_password_title">Reset Password</string>
    <string name="forget_password_save_mail_tip">Enter your registeration email associated with your account.</string>
    <string name="forget_password_mail_address">Enter email address</string>
    <string name="forget_password_mail_address_invalid">Invalid email address!</string>
    <string name="forget_password_next_step">Send</string>
    <string name="forget_password_send_request_message">  The Email has been sent,please check!</string>
    <string name="register_success_content_text2">  To invite your friends and enjoy it!</string>
    <string name="register_success_btn_go">Join now!</string>
    <string name="register_success_content_text">ID:</string>
    <string name="register_success_login_by_mail">Email:</string>
    <string name="chat_activity_livestatus_onlie_desc">[Online...]</string>
    <string name="chat_activity_livestatus_offline_desc">[Offline]</string>
    <string name="s_chatting_other_tools_send_pic">Image</string>
    <string name="s_chatting_other_tools_real_time_voice">Voice Chat</string>
    <string name="s_chatting_other_tools_videochat_new">Video Chat</string>
    <string name="s_chatting_other_tools_videochat">Video Chat</string>
    <string name="s_chatting_other_tools_sendpic">Picture</string>
    <string name="sns_friend_list_form_title">Search Result</string>
    <string name="sns_friend_list_form_item_uid">ID</string>
    <string name="sns_friend_list_form_item_status">Status:</string>
    <string name="sns_friend_list_form_item_status_online">[Online]</string>
    <string name="sns_friend_list_form_item_status_offline">[Offline]</string>
    <string name="sns_friend_list_form_item_email">Email</string>
    <string name="sns_find_firend_form_title">Search Users</string>
    <string name="sns_find_firend_form_add_uid">Lover\'s ID or Email</string>
    <string name="sns_find_firend_form_submit">Search now!</string>
    <string name="sns_find_firend_form_check_mail_format">Invalid Email!</string>
    <string name="sns_find_firend_form_check_text_empty">Email/ID is empty!</string>
    <string name="sns_find_firend_form_mail_not_exist">Invalid account!</string>
    <string name="sns_find_firend_form_search_hint">Search name or ID or mail.</string>
    <string name="sns_find_firend_form_search_strict_hint">Search ID or mail</string>
    <string name="sns_find_firend_form_condition_male">Find male</string>
    <string name="sns_find_firend_form_condition_female">Find female</string>
    <string name="sns_find_firend_form_condition_all">Find all</string>
    <string name="sns_find_firend_form_random_search">Random Search</string>
    <string name="sns_find_firend_form_strict_search">Exact Search</string>
    <string name="sns_find_firend_form_mail_not_exist_tip">Invalid account!</string>
    <string name="sns_find_firend_form_invite_uid">Invite</string>
    <string name="sns_find_firend_form_uid_not_exist_tip">Invalid ID!</string>
    <string name="sns_find_firend_form_random_search_hint">Only {0} lovers allowed currently.</string>
    <string name="sns_find_firend_form_random_search_isonline_condition">Please choose whether or not online</string>
    <string name="sns_find_firend_form_random_search_gender_condition">Please select the gender</string>
    <string name="sns_friend_info_form_title">About Lover</string>
    <string name="sns_friend_info_form_add_self_tip">Can\'t add yourself!</string>
    <string name="sns_friend_info_form_has_friend_tip">{0} has been your lover already!</string>
    <string name="sns_friend_info_form_request_success"> The request has been sent,please wait...</string>
    <string name="sns_friend_info_form_request_fialure">Failed to send the request!</string>
    <string name="sns_friend_info_form_info_sex_male">Male</string>
    <string name="sns_friend_info_form_info_sex_female">Female</string>
    <string name="sns_friend_info_form_info_sex">Gender</string>
    <string name="sns_friend_info_form_info_register_time">Registered Time</string>
    <string name="sns_friend_info_form_info_last_login_time">Recently Login</string>
    <string name="sns_friend_info_form_info_add_friend">To Be Lover</string>
    <string name="sns_friend_info_form_info_temporay_chat">Say hi</string>
    <string name="sns_friend_info_form_info_temporay_chat_ex">Instant Message</string>
    <string name="sns_friend_info_form_info_say_hi_text">Greetings:</string>
    <string name="sns_friend_info_form_info_say_hi_title">Greeting to {0}</string>
    <string name="sns_friend_info_form_info_say_hi_send">Send</string>
    <string name="sns_friend_info_form_info_say_hi_successd">Succeed to send</string>
    <string name="sns_friend_info_form_info_say_hi_failure">Fail to send</string>
    <string name="sns_friend_info_form_tempchat_self_tip">Can\'t send message to yourself!</string>
    <string name="sns_friend_info_form_tempchat_hasadd_tip">{0} is already your friend, please close this page and go to \"Lover\" page, enjoy it!</string>
    <string name="sns_friend_info_form_info_more_than_one_hint_title">Have {0} lover only!</string>
    <string name="sns_friend_info_form_info_more_than_one_hint_msg">Only {0} lover allowed currently!</string>
    <string name="sns_friend_info_form_info_myphotos">Photos</string>
    <string name="sns_friend_info_form_info_myvoices">Voices</string>
    <string name="sns_friend_info_form_info_guest_flag">Stranger</string>
    <string name="subtitle_from">付款地址</string>
    <string name="subtitle_to">收款地址</string>
    <string name="subtitle_gas_fee">矿工费</string>
    <string name="subtitle_transaction_num">交易号 #</string>
    <string name="subtitle_transaction_time">交易时间</string>
    <string name="subtitle_block_num">区块 #</string>
    <string name="action_more_details">在区块浏览器中参看详细信息</string>
</resources>